--- a/resources/index.html
+++ b/resources/index.html
@@ -5,88 +5,99 @@
 	<link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
-<body>
-<h1> Header </h1>
+<body> 
+	<div id="palette"> 
+<div class="pen" style="background-color:white;" onclick="setPenColour('white')"></div>
+<div class="pen" style="background-color:black;" onclick="setPenColour('black')"></div> 
+<div class="pen" style="background-color:green;" onclick="setPenColour('green')"></div>  
+<div class="pen" style="background-color:red;" onclick="setPenColour('red')"></div> 
+<div class="pen" style="background-color:purple;" onclick="setPenColour('purple')"></div> 
+<div class="pen" style="background-color:yellow;" onclick="setPenColour('yellow')"></div>
+<div class="pen" style="background-color:lightgrey;" onclick="setPenColour('lightgrey')"></div>    
+	</div> 
+
+
+<h1> Pixel Art Maker </h1>
 <div id="art">
 <div class="row"> 
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div> 
-	<div class="pixel"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div> 
+	<div class="pixel" onclick="setPixelColour(this)"></div>
 </div>
 <div class="row"> 
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div> 
 </div>
 <div class="row"> 
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div> 
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div> 
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
 </div> 
 <div class="row"> 
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div> 
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div> 
+	</div>
+<div class="row"> 
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div> 
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
 </div>
 <div class="row"> 
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div> 
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div> 
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
 </div>
 <div class="row"> 
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div> 
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div> 
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
 </div>
 <div class="row"> 
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div> 
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-</div>
-<div class="row"> 
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div> 
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
-	<div class="pixel"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div> 
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
+	<div class="pixel" onclick="setPixelColour(this)"></div>
 </div>
 </div>
 </body>
